--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=51594d26e9739dc58bf41782ddc78515
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/intro_sf64"
+DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/intro_sf64?serverVersion=8.0.43"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
