--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+###> PhpStorm ###
+/.idea
+###< PhpStorm ###
+###> symfony/framework-bundle ###
+/.env
+/.env.dev
+/.env.test
